// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`full-pipeline characterization (frozen — guards the buildRamp extraction) > Case A — kitchen sink, no hardware, no per-ramp hue (must not change) 1`] = `
[
  [
    "#003308",
    "#006324",
    "#abcdef",
    "#37cd76",
    "#5ceb9b",
    "#aeffcf",
  ],
  [
    "#000611",
    "#00214c",
    "#1a2f6b",
    "#5965bc",
    "#e6e7ff",
  ],
  [
    "#120006",
    "#551a2f",
    "#854050",
    "#a65962",
    "#be7374",
    "#e69c95",
    "#ffe2dc",
  ],
]
`;

exports[`full-pipeline characterization (frozen — guards the buildRamp extraction) > Case B — kitchen sink + per-ramp hue override (EXPECTED to change at the mirror fix) 1`] = `
[
  [
    "#003218",
    "#006234",
    "#abcdef",
    "#37cd76",
    "#67ea94",
    "#b2ffc5",
  ],
  [
    "#00070d",
    "#002443",
    "#1a2f6b",
    "#6561ba",
    "#ede5ff",
  ],
  [
    "#120006",
    "#551a2f",
    "#854050",
    "#a65962",
    "#be7374",
    "#e69c95",
    "#ffe2dc",
  ],
]
`;

exports[`full-pipeline characterization (frozen — guards the buildRamp extraction) > Case C — kitchen sink + gameboy hardware snap (must not change) 1`] = `
[
  [
    "#346856",
    "#e0f8d0",
    "#88c070",
    "#e0f8d0",
  ],
  [
    "#081820",
    "#346856",
    "#e0f8d0",
  ],
  [
    "#081820",
    "#346856",
    "#88c070",
    "#e0f8d0",
  ],
]
`;
